--- a/src/gh_implementation/config.yaml
+++ b/src/gh_implementation/config.yaml
@@ -2,10 +2,10 @@
 DEBUG: False
 VAL: False
 TOY_DATA: False
-threshold: 100
+threshold: 256
+amp: False     # AMP helps w/ memory but causes gradient explosions
 experiment_name: exp
 num_workers: 6
-amp: False
 pin_memory: True
 train_shuffle: True
 val_shuffle: False
@@ -15,8 +15,8 @@ input_dim: 40
 update_freq: 24
 channels_last: False
 val_workers: 4
-val_batch_size: 32
-min_tf: 0.25
+val_batch_size: 128
+min_tf: 0.5
 grad_clip: 2.0
 
 # ray
@@ -35,39 +35,43 @@ enc_h: [256]
 dec_h: [512]
 embed_dim: [256]
 attn_dim: [128]
-conv_channels: [32]
+conv_channels: [0]
 enc_dropout: [0.3]
 dec_dropout: [0.3]
 use_multihead: [False]
 nheads: [1]
-spec_augment: [True]
 lock_drop: [False]
+spec_augment: True
+proj_size: 0
+enc_ln: False
+dec_ln: False
+weight_tying: True
 encoder_arch: 
-        - [conv_extractor, lstm, lstm, lstm, lstm, lstm, lstm]
-
+        - [lstm, lstm, plstm, plstm, plstm, lstm]
+minival: True
 
 # hyperparameters
-onecyclelr: [False]
 lr: [0.001]
 weight_decay: [0.000005]
 gamma: [0.5]
-batch_size: [64]
+batch_size: [96]
 lr_step: [30]
+smooth_temp: 0.0
 
 
 # transfer learning configuration
 warmup_epochs: 0
 pretrained_decoder: True
-pretrained_full: False
+pretrained_full: False #True
 warmup_zero_context: True
-decoder_ckpt_path: ~/hw4p2/decoder_ckpts/decoder-2021-04-24-02-5851-epoch10-dist524-train_model_22c3b_00000.pth
-full_ckpt_path: ~/hw4p2/full_ckpts/full-2021-04-27-22-4054-epoch11-dist491-inner_7666c_00000.pth
+decoder_ckpt_path: ~/hw4p2/decoder_ckpts/decoder-2021-04-28-23-0617-epoch20-dist376-inner_0f2ed_00000.pth
+full_ckpt_path: ~/hw4p2/full_ckpts/full-2021-04-29-11-5452-epoch33-dist105-inner_4eeab_00000.pth
 
 
 # schedules
 tf_init: 0.90
-tf_drop_every: 10
-tf_drop: 0.05
+tf_drop_every: 25
+tf_drop: 0.1
 
 
 # PATHS
