--- a/src/gh_implementation/inference_config.yaml
+++ b/src/gh_implementation/inference_config.yaml
@@ -2,10 +2,10 @@
 DEBUG: False
 VAL: False
 TOY_DATA: False
-threshold: 100
+threshold: 256
+amp: False     # AMP helps w/ memory but causes gradient explosions
 experiment_name: exp
 num_workers: 6
-amp: False
 pin_memory: True
 train_shuffle: True
 val_shuffle: False
@@ -17,7 +17,7 @@ channels_last: False
 val_workers: 4
 val_batch_size: 128
 min_tf: 0.25
-grad_clip: 2.0
+grad_clip: 5.0
 
 # ray
 experiment_name: exp
@@ -31,56 +31,47 @@ brackets: 1
 num_samples: 1
 
 # architectural parameters
-enc_rnn_layers: [3]
-conv_channels: [64]
-conv_layers: [0]
-kernel_dim: [[3, 3]]
-stride: [[1, 2]]
-enc_norm_type: [2] # 0 is BN, 1 is Layer Norm, 2 is None
-dec_norm_type: [2]
-dec_use_bias: [True]
-enc_use_bias: [True]
 enc_h: [256]
 dec_h: [512]
 embed_dim: [256]
 attn_dim: [128]
-enc_dropout: [0.2]
-dec_dropout: [0.2]
-enc_init_weights: [False]
-dec_init_weights: [False]
-orthogonal_init: [False]
-use_se: [False]
-use_pyramid: [True]
+conv_channels: [0]
+enc_dropout: [0.3]
+dec_dropout: [0.3]
+use_multihead: [False]
+nheads: [1]
 lock_drop: [False]
-weight_tying: False
+spec_augment: False
+proj_size: 0
+enc_ln: False
+dec_ln: False
+weight_tying: True
+encoder_arch: 
+        - [plstm, plstm, plstm, lstm]
+minival: False
 
 # hyperparameters
-onecyclelr: [False]
 lr: [0.001]
 weight_decay: [0.000005]
 gamma: [0.5]
 batch_size: [128]
-lr_step: [15]
+lr_step: [30]
+smooth_temp: 0.0
+
 
 # transfer learning configuration
 warmup_epochs: 0
 pretrained_decoder: False
 pretrained_full: True
 warmup_zero_context: True
-decoder_ckpt_path: ~/hw4p2/decoder_ckpts/decoder-2021-04-24-02-5851-epoch10-dist524-train_model_22c3b_00000.pth
-full_ckpt_path: ~/hw4p2/best_models/pyramid_3layerRNN_dist15/full-2021-04-24-12-0823-epoch55-dist15-train_model_8962c_00000.pth
-
-
-
+decoder_ckpt_path: ~/hw4p2/decoder_ckpts/decoder-2021-04-28-23-0617-epoch20-dist376-inner_0f2ed_00000.pth
+full_ckpt_path: ~/hw4p2/full_ckpts/full-2021-04-29-02-0048-epoch28-dist31-inner_af7eb_00000.pth
 
 
 # schedules
-tf_init: 0.9
-tf_drop_every: 15
+tf_init: 0.90
+tf_drop_every: 25
 tf_drop: 0.1
-attn_init: 0.0
-attn_drop_every: 10
-attn_drop: 0.1
 
 
 # PATHS
