--- a/src/inference_config.yaml
+++ b/src/inference_config.yaml
@@ -16,8 +16,8 @@ update_freq: 24
 channels_last: False
 val_workers: 4
 val_batch_size: 128
-min_tf: 0.25
-grad_clip: 5.0
+min_tf: 0.5
+grad_clip: 2.0
 
 # ray
 experiment_name: exp
@@ -36,41 +36,40 @@ dec_h: [512]
 embed_dim: [256]
 attn_dim: [128]
 conv_channels: [0]
-enc_dropout: [0.3]
-dec_dropout: [0.3]
+enc_dropout: [0.35]
+dec_dropout: [0.35]
 use_multihead: [False]
 nheads: [1]
 lock_drop: [False]
-spec_augment: False
+spec_augment: True
 proj_size: 0
 enc_ln: False
 dec_ln: False
 weight_tying: True
 encoder_arch: 
-        - [plstm, plstm, plstm, lstm]
-minival: False
+        - [lstm, lstm, lstm, plstm, plstm, plstm, lstm]
+minival: True
 
 # hyperparameters
 lr: [0.001]
 weight_decay: [0.000005]
 gamma: [0.5]
-batch_size: [128]
-lr_step: [30]
+batch_size: [64]
+lr_step: [50]
 smooth_temp: 0.0
 
 
 # transfer learning configuration
 warmup_epochs: 0
-pretrained_decoder: False
+pretrained_decoder: False #True
 pretrained_full: True
 warmup_zero_context: True
 decoder_ckpt_path: ~/hw4p2/decoder_ckpts/decoder-2021-04-28-23-0617-epoch20-dist376-inner_0f2ed_00000.pth
-full_ckpt_path: ~/hw4p2/full_ckpts/full-2021-04-29-02-0048-epoch28-dist31-inner_af7eb_00000.pth
-
+full_ckpt_path: ~/hw4p2/full_ckpts/full-2021-04-30-11-5614-epoch120-dist8-inner_85fa3_00000.pth
 
 # schedules
-tf_init: 0.90
-tf_drop_every: 25
+tf_init: 0.60
+tf_drop_every: 20
 tf_drop: 0.1
 
 
