--- a/src/config.yaml
+++ b/src/config.yaml
@@ -92,3 +92,7 @@ debug_train_transcripts_path: ~/hw4p2/data/debug/train_transcripts.npy
 debug_val_path: ~/hw4p2/data/debug/dev.npy
 debug_val_transcripts_path: ~/hw4p2/data/debug/dev_transcripts.npy
 plot_path: ~/hw4p2/plots/
+
+knnw_audio_path: ../data/knnw_en.log_spectrogram.npy
+knnw_subtitle_path: ../data/knnw_en_sub.csv
+knnw_subtitle_edit_path: ../data/knnw_en_sub_edit.csv
