--- a/src/config.yaml
+++ b/src/config.yaml
@@ -5,16 +5,16 @@ dataset: "KNNW" # or WSJ
 DEBUG: False
 VAL: False
 TOY_DATA: False
-threshold: 256
+threshold: 200 
 amp: False     # AMP helps w/ memory but causes gradient explosions
 experiment_name: exp
-num_workers: 6
+num_workers: 6 
 pin_memory: True
 train_shuffle: True
 val_shuffle: False
 device: "cuda:0"
 run_inference: False
-input_dim: 40
+input_dim: 129
 update_freq: 24
 channels_last: False
 val_workers: 4
@@ -50,7 +50,7 @@ enc_ln: False
 dec_ln: False
 weight_tying: True
 encoder_arch: 
-        - [lstm, lstm, plstm, plstm, plstm, lstm]
+        - [lstm, lstm, plstm, plstm, plstm]
 minival: True
 
 # hyperparameters
@@ -58,41 +58,46 @@ lr: [0.001]
 weight_decay: [0.000005]
 gamma: [0.5]
 batch_size: [96]
-lr_step: [30]
+lr_step: [70]
 smooth_temp: 0.0
 
 
 # transfer learning configuration
 warmup_epochs: 0
-pretrained_decoder: True
+pretrained_decoder: False
 pretrained_full: False #True
 warmup_zero_context: True
-decoder_ckpt_path: ~/hw4p2/decoder_ckpts/decoder-2021-04-28-23-0617-epoch20-dist376-inner_0f2ed_00000.pth
-full_ckpt_path: ~/hw4p2/full_ckpts/full-2021-04-29-11-5452-epoch33-dist105-inner_4eeab_00000.pth
+decoder_ckpt_path: ~/autosubs/decoder_ckpts/decoder-2021-04-28-23-0617-epoch20-dist376-inner_0f2ed_00000.pth
+full_ckpt_path: ~/autosubs/full_ckpts/full-2021-04-29-11-5452-epoch33-dist105-inner_4eeab_00000.pth
 
+validation_split: 0.1
+shuffle_dataset_split: True
+random_seed_split: 42
 
 # schedules
 tf_init: 0.90
-tf_drop_every: 25
+tf_drop_every: 50
 tf_drop: 0.1
 
 
-# PATHS
-train_path: ~/hw4p2/data/train.npy
-train_transcripts_path: ~/hw4p2/data/train_transcripts.npy
-val_path: ~/hw4p2/data/dev.npy
-val_transcripts_path: ~/hw4p2/data/dev_transcripts.npy
-test_path: ~/hw4p2/data/test.npy
-results_path: ~/hw4p2/results/
-ray_results_dir: ~/hw4p2/ray_logs/
-checkpoints_path: ~/hw4p2/checkpoints/
-decoder_ckpt_dir: ~/hw4p2/decoder_ckpts/
-debug_train_path: ~/hw4p2/data/debug/train.npy
-debug_train_transcripts_path: ~/hw4p2/data/debug/train_transcripts.npy
-debug_val_path: ~/hw4p2/data/debug/dev.npy
-debug_val_transcripts_path: ~/hw4p2/data/debug/dev_transcripts.npy
-plot_path: ~/hw4p2/plots/
 
-knnw_audio_path: ../data/knnw_en.log_spectrogram.npy
-knnw_subtitle_path: ../data/knnw_en_sub.csv
-knnw_subtitle_edit_path: ../data/knnw_en_sub_edit.csv
+# PATHS
+train_path: ~/autosubs/data/train.npy
+train_transcripts_path: ~/autosubs/data/train_transcripts.npy
+val_path: ~/autosubs/data/dev.npy
+val_transcripts_path: ~/autosubs/data/dev_transcripts.npy
+test_path: ~/autosubs/data/test.npy
+results_path: ~/autosubs/results/
+ray_results_dir: ~/autosubs/ray_logs/
+checkpoints_path: ~/autosubs/checkpoints/
+decoder_ckpt_dir: ~/autosubs/decoder_ckpts/
+debug_train_path: ~/autosubs/data/debug/train.npy
+debug_train_transcripts_path: ~/autosubs/data/debug/train_transcripts.npy
+debug_val_path: ~/autosubs/data/debug/dev.npy
+debug_val_transcripts_path: ~/autosubs/data/debug/dev_transcripts.npy
+plot_path: ~/autosubs/plots/
+
+knnw_audio_path: ~/autosubs/data/knnw_en.log_spectrogram.npy
+knnw_subtitle_path: ~/autosubs/data/knnw_en_sub_edit.csv
+knnw_subtitle_edit_path: ~/autosubs/data/knnw_en_sub_edit.csv
+
