refactored dataloaders.  fixed block-oriented split.  wrote transfer learning code.  merged hw4p2 spec augment for necessary time parameter.  deleted lots of old irrelevant code.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
+plots
+full_ckpts
+checkpoints
+decoder_ckpts
+ray_logs
+*.pkl
+stdout
+stderr
+*.summer
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
