--- a/src/config.yaml
+++ b/src/config.yaml
@@ -36,8 +36,8 @@ enc_h: [256]
 dec_h: [512]
 embed_dim: [256]
 attn_dim: [128]
-enc_dropout: [0.35]
-dec_dropout: [0.35]
+enc_dropout: [0.5]
+dec_dropout: [0.5]
 use_multihead: [False]
 nheads: [1]
 spec_augment: True
@@ -56,13 +56,17 @@ smooth_temp: 0.0
 train_test_split: 0.9
 random_sampling: True
 
+
+
 # transfer learning configuration
 warmup_epochs: 0
 transfer_decoder: False
 transfer_full: True
+freeze_encoder: False
+freeze_decoder: False
 warmup_zero_context: True
 decoder_ckpt_path: ~/autosubs/decoder_ckpts/decoder-2021-04-28-23-0617-epoch20-dist376-inner_0f2ed_00000.pth
-full_ckpt_path: ~/autosubs/full_ckpts/full-2021-04-30-11-5614-epoch120-dist8-inner_85fa3_00000.pth
+full_ckpt_path: ~/autosubs/full_ckpts/full-2021-05-02-14-2944-epoch2699-dist15-inner_70482_00000.pth
 
 # schedules
 tf_init: 0.90
