--- a/src/config.yaml
+++ b/src/config.yaml
@@ -15,8 +15,8 @@ run_inference: False
 input_dim: 129
 update_freq: 24
 channels_last: False
-val_workers: 4
-val_batch_size: 256
+val_workers: 1
+val_batch_size: 16
 min_tf: 0.5
 grad_clip: 2.0
 
@@ -62,11 +62,15 @@ random_sampling: True
 warmup_epochs: 0
 transfer_decoder: False
 transfer_full: True
+transfer_knnw: True
 freeze_encoder: False
 freeze_decoder: False
 warmup_zero_context: True
 decoder_ckpt_path: ~/autosubs/decoder_ckpts/decoder-2021-04-28-23-0617-epoch20-dist376-inner_0f2ed_00000.pth
-full_ckpt_path: ~/autosubs/full_ckpts/final-kaggle-8pt86.pth
+knnw_ckpt_path: ~/autosubs/full_ckpts/knnw-2021-05-02-19-5207-epoch365-dist20-inner_fb4e3_00000.pth
+wsj_ckpt_path: ~/autosubs/full_ckpts/final-kaggle-8pt86.pth
+
+
 
 # schedules
 tf_init: 0.90
